// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled radio button renders disabled version 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiButtonBase-disabled MuiIconButton-root MuiIconButton-disabled MuiPrivateSwitchBase-root MuiRadio-root Radio-root MuiPrivateSwitchBase-disabled MuiRadio-disabled Radio-disabled"
    tabindex="-1"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="Radio-uncheckedIcon"
      />
      <input
        class="MuiPrivateSwitchBase-input"
        disabled=""
        type="radio"
        value=""
      />
    </span>
  </span>
</div>
`;

exports[`radio button renders default radio button 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiRadio-root Radio-root"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="Radio-uncheckedIcon"
      />
      <input
        class="MuiPrivateSwitchBase-input"
        type="radio"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;
